# Starline-Test-Task

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp
src/core/: CMakeLists.txt
src/core/ProcessTrackedData/: CMakeLists.txt  ProcessTrackedData.cpp  ProcessTrackedData.hpp
src/core/Tracker/: CMakeLists.txt  Tracker.cpp  Tracker.hpp
src/core/TrackingManager/: CMakeLists.txt  TrackingManager.cpp  TrackingManager.hpp
src/lib/: CMakeLists.txt
src/lib/TrackerFileReader/: CMakeLists.txt  TrackerFileReader.cpp  TrackerFileReader.hpp
src/lib/TrackerFileWriter/: CMakeLists.txt  TrackerFileWriter.cpp  TrackerFileWriter.hpp
src/models/: SpeedTimeStamp.hpp
unittests/: CMakeLists.txt  test_tracker.cpp  test_tracking_manager.cpp
